--- a/vue/vue-router-test/index3.html
+++ b/vue/vue-router-test/index3.html
@@ -1,3 +1,5 @@
+<!-- 重定向和别名
+通过routes配置 -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,9 +12,9 @@
         <router-link to="/bar">Go To bar</router-link>
         <router-link to="/">Go To /</router-link>
     </p>
-    <router-view></router-view>
-    <router-view name= 'a'></router-view>
-    <router-view name= 'b'></router-view>
+    <router-view name='a'></router-view>
+    <router-view name='b'></router-view>
+    <router-view name='c'></router-view>
 </div>
 <script src="https://unpkg.com/vue/dist/vue.js"></script>
 <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
@@ -25,11 +27,12 @@
     const Baz = {template: '<div>Baz</div>'}
     const routes = [
         {path: '/foo', redirect: '/bar'},
-        {path: '/bar', component: Bar},
-        {path: '/', components: {
-            default: Foo,
-            a: Bar,
-            b: Baz 
+        {path: '/bar', component: Bar },
+        {path: '/', 
+            components: {
+                c: Foo,
+                a: Bar,
+                b: Baz
             }
         }
     ]
